2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	Forgot to add the clearlooks-gummy rc file to the list.

2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/smooth/src/engine/smooth_gtk2_misc.c:
	(smooth_gtk_button_get_props):
	* engines/support/widget-information.c: (ge_option_menu_get_props),
	(ge_button_get_default_border):
	Replace g_free with gtk_border_free and gtk_requisition_free where
	appropriate. Bug #438456, based on patch by Carlos Garnacho.

2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_slider):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap), (clearlooks_style_draw_option),
	(clearlooks_style_draw_layout):
	Correct some C89. Bug #438397, patch by Jens Granseuer.

2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/gtkrcs/clearlooks-gummy:
	Added rc style to torture test Clearlooks' Gummy style.

2007-05-14  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.h:
	Define clearlooks_register_style_gummy and make it internal. This
	fixes "make check". This commit is part of the 2.11.0 release.

2007-05-14  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for the 2.11.0 release.

2007-05-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry), (clearlooks_draw_statusbar):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_draw_glossy_gradient), (clearlooks_glossy_draw_inset),
	(clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_progressbar_fill),
	(clearlooks_glossy_draw_tab),
	(clearlooks_glossy_draw_list_view_header),
	(clearlooks_glossy_draw_menuitem),
	(clearlooks_glossy_draw_menubaritem),
	(clearlooks_glossy_draw_selected_cell):
	Improvements in glossy:
	Glossy inactive tabs