@@ -1,3 +1,9 @@
+2007-05-21  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_focus):
+	Removed the gtk_widget_grab_focus. This fixes tabbing out of a
+	GtkComboBoxEntry.
+
 2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* test/Makefile.am:
